added new method without repo implementation
